# dbt-bdd

./: .gitignore  Makefile  README.md  pyproject.toml
dbt_bdd/: dbt_project.yml
dbt_bdd/.dbt/: profiles.yml
dbt_bdd/data/: expected_normalized_customers.csv  input_customer_data.csv
dbt_bdd/features/: customer_normalization.feature
dbt_bdd/features/steps/: customer_steps.py
dbt_bdd/models/inputs/: input_customer_data.sql
dbt_bdd/models/tests/: test_normalized_customers.sql
dbt_bdd/models/transforms/: normalized_customers.sql
