[project]
name = "dbt-bdd"
version = "0.1.0"
description = "This project aims to show how to integrate BDD practices within DBT context"
requires-python = ">=3.11"
authors = [
    { name = "SENHAJI RHAZI Hamza", email = "hamza.senhajirhazi@gmail.com" },
]

dependencies = [
    "behave>=1.2.6",
    "dbt-core>=1.10.4",
    "dbt-duckdb>=1.9.4",
    "duckdb>=1.3.2",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
]
